# PianoLoTayu

./: .gitignore  Makefile  README.md  entry_cli.py  entry_gui.py  pyproject.toml  requirements.txt
.github/workflows/: package.yml
scripts/: extract_member.py
soundfonts/: SineWave.sf2
src/pianolotayu/: __init__.py  __main__.py  analysis.py  audio.py  cli.py  config.py  midi_writer.py  play_cli.py  synthesizer.py
src/pianolotayu/cli/: i18n.py  main.py
src/pianolotayu/convert/: __init__.py  analysis.py  audio.py  midi_writer.py
src/pianolotayu/gui/: drop_label.py  export.py  main.py  main.ui  piano_roll.py  piano_view.py  ui_main.py  view_window.py  win32_utils.py
