[project]
name = "pianolotayu"
version = "0.1.0"
description = "Convert audio files (MP3/WAV) to piano MIDI via Fourier Transform"
readme = "README.md"
authors = [
    { name = "LYXOfficial", email = "lyx2010official@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "audioread>=3.1.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "librosa>=0.11.0",
    "numpy>=2.4.6",
    "pretty-midi>=0.2.11",
    "pydub>=0.25.1",
    "pyfluidsynth>=1.4.0",
    "pyside6>=6.11.1",
    "scipy>=1.18.0",
    "soundfile>=0.14.0",
]

[project.scripts]
pianolotayu = "pianolotayu.cli.main:main"
pianolotayu-gui = "pianolotayu.gui.main:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
