[project]
name = "pianolotayu"
version = "0.1.0"
description = "Convert audio files (MP3/WAV) to piano MIDI via Fourier Transform"
readme = "README.md"
authors = [
    { name = "LYXOfficial", email = "lyx2010official@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.4.6",
    "pretty-midi>=0.2.11",
    "pyfluidsynth>=1.4.0",
    "pyside6>=6.11.1",
    "soundfile>=0.14.0",
    "soxr>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "nuitka>=4.1.3",
]

[project.scripts]
pianolotayu-cli = "pianolotayu.cli.main:main"
pianolotayu-gui = "pianolotayu.gui.main:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
